roco-gen/src/snapshots/roco_gen__tera_ext__tests__can_render_form_field_[form_bool_bool].snap
---
source: roco-gen/src/tera_ext.rs
expression: "format!(\"Create form\\n\\n{create_form}\\n\\nEdit Form\\n\\n{edit_form}\")"
---
Create form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">bool</label>
    <input class="flex rounded-md border border-input bg-transparent text-base shadow-sm md:text-sm" id="bool" name="bool" type="checkbox" value="true"   />
</div>

Edit Form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">bool</label>
    <input class="flex rounded-md border border-input bg-transparent text-base shadow-sm md:text-sm" id="bool" name="bool" type="checkbox" value="true" {% if item.bool %}checked{%endif %}  />
</div>
